tests/parser/logic-or-error.stderr
error: expected expression
 --> $DIR/logic-or-error.lox:1:9
  |
1 | true or /;
  |         ^
